lock works but does not authenticate

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -14,10 +14,15 @@
     <script type="text/javascript" src="/vendor/angular-lock.js"></script>
     <script type="text/javascript" src="/vendor/angular-jwt.min.js"></script>
     <script type="text/javascript" src="/scripts/clientapp.js"></script>
+    <script type="text/javascript" src="/scripts/app.run.js"></script>
+    <script type="text/javascript" src="/scripts/services/auth.service.js"></script>
+    <script type="text/javascript" src="/scripts/controllers/homeController.js"></script>
+    <script type="text/javascript" src="/scripts/controllers/loginController.js"></script>
+    <script type="text/javascript" src="/scripts/controllers/pingController.js"></script>
 
   </head>
   <body ng-app="myApp">
-  
+
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
